--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@date-io/dayjs": "^3.0.0",
     "@mdi/font": "^7.4.47",
     "dayjs": "^1.11.10",
+    "plotly.js": "^2.31.1",
     "sass": "^1.75.0",
     "vite-plugin-vuetify": "^2.0.3",
     "vue": "^3.4.21",
@@ -26,6 +27,7 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.12.5",
+    "@types/plotly.js": "^2.29.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
@@ -36,6 +38,7 @@
     "prettier": "^3.2.5",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
+    "vite-plugin-node-polyfills": "^0.21.0",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vue-tsc": "^2.0.11"
   }
