feat: config store

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vite-plugin-vuetify": "^2.0.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vuetify": "^3.5.16"
+    "vuetify": "^3.5.16",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
