--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^3.4.21",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.0",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.5.16",
     "vuex": "^4.0.2"
   },
