--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mdi/font": "^7.4.47",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "firebase": "^10.11.1",
     "plotly.js": "^2.31.1",
     "sass": "^1.75.0",
     "secure-ls": "^1.2.6",
