--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@date-io/dayjs": "^3.0.0",
     "@mdi/font": "^7.4.47",
+    "@types/lodash": "^4.17.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "firebase": "^10.11.1",
+    "lodash": "^4.17.21",
     "plotly.js": "^2.31.1",
     "sass": "^1.75.0",
     "secure-ls": "^1.2.6",
