--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.10",
     "firebase": "^10.11.1",
     "lodash": "^4.17.21",
+    "pinia": "^2.1.7",
     "plotly.js": "^2.31.1",
     "sass": "^1.75.0",
     "secure-ls": "^1.2.6",
